# openssl_cpp_wrapper

./: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  main.cpp  openssl_cpp.kdev4
.kdev4/: openssl_cpp.kdev4
openssl_wrapper_lib/: CMakeLists.txt
openssl_wrapper_lib/include/: big_number.h  big_number.h~  lib.h
openssl_wrapper_lib/src/: big_number.cpp
